// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile render tests should render correctly given correct prop 1`] = `
<div
  className="sc-bdVaJa dFyZnU"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    23
  </span>
</div>
`;

exports[`Tile render tests should render correctly given custom number 1`] = `
<div
  className="sc-bdVaJa jodVcS"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    13
  </span>
</div>
`;

exports[`Tile render tests should render correctly given default number 1`] = `
<div
  className="sc-bdVaJa hYSZle"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    0
  </span>
</div>
`;

exports[`Tile render tests should render correctly given visible prop 1`] = `
<div
  className="sc-bdVaJa clEXFS tile-invisible"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    1
  </span>
</div>
`;
